# testscribe-demo

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  test-scribe-config.yml
tests/: setup.py  test_testscribe_test.py
tests/manual/: test_parametrization.py
testscribe_test/: person.py  prime.py  service.py  service_call.py  simple_mock.py
tsdemo/: annotate_field_type.py  create_object.py  greet.py  ignore_mock_return.py  object_in_mock_call_param.py  object_result.py  object_with_repr_result.py  objects_in_list.py  parametrization.py  patch_function.py  patch_string.py  person.py  raise_exception.py  service.py  service_call.py  simple_mock.py  string_method.py
