[tool.poetry]
name = "testscribe-test"
version = "0.1.0"
description = "Test the TestScribe tool"
authors = ["Ray Yang <ruiguo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
