[tool.poetry]
name = "testscribe-demo"
version = "0.1.0"
description = "Demo the TestScribe tool"
authors = ["Ray Yang <ruiguo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
testscribe = "*"
# Use a local path for easier test/development of the testscribe tool itself.
#testscribe = { path = "../testscribe/", develop = true }

pytest = "*"
# to get color output
rich = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
